# launchbox-plugin

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
lb_plugin/: __init__.py  lb_plugin.py
