[metadata]
name = launchbox-plugin
version = 1.0.0
description = A python helper class for integrating Launchbox plugins.
long_description = file: README.md
url = https://github.com/nasa-jpl/launchbox-plugin
author = Jet Propulsion Laboratory
author_email = dl-webdev@jpl.nasa.gov
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    bottle == 0.12.20